// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Accordion Element renders an accordion 1`] = `
<div
  aria-multiselectable="true"
  className="tribe-editor__accordion"
  role="tablist"
>
  <article
    className="tribe-editor__accordion__row active"
  >
    <button
      aria-controls="content-id-1"
      aria-expanded="true"
      aria-selected="true"
      className="tribe-editor__button tribe-editor__accordion__row-header header-class"
      id="header-id-1"
      onClick={[Function]}
      role="tab"
      type="button"
    >
      this is header
    </button>
    <div
      aria-hidden="false"
      aria-labelledby="header-id-1"
      className="tribe-editor__accordion__row-content content-class"
      id="content-id-1"
      role="tabpanel"
    >
      this is a content
    </div>
  </article>
</div>
`;

exports[`Accordion Element renders an accordion with inactive state 1`] = `
<div
  aria-multiselectable="true"
  className="tribe-editor__accordion"
  role="tablist"
>
  <article
    className="tribe-editor__accordion__row"
  >
    <button
      aria-controls="content-id-1"
      aria-expanded="false"
      aria-selected="false"
      className="tribe-editor__button tribe-editor__accordion__row-header header-class"
      id="header-id-1"
      onClick={[Function]}
      role="tab"
      type="button"
    >
      this is header
    </button>
    <div
      aria-hidden="true"
      aria-labelledby="header-id-1"
      className="tribe-editor__accordion__row-content content-class"
      id="content-id-1"
      role="tabpanel"
    >
      this is a content
    </div>
  </article>
</div>
`;

exports[`Accordion Element renders an accordion with wrapper class 1`] = `
<div
  aria-multiselectable="true"
  className="tribe-editor__accordion test-class"
  role="tablist"
>
  <article
    className="tribe-editor__accordion__row active"
  >
    <button
      aria-controls="content-id-1"
      aria-expanded="true"
      aria-selected="true"
      className="tribe-editor__button tribe-editor__accordion__row-header header-class"
      id="header-id-1"
      onClick={[Function]}
      role="tab"
      type="button"
    >
      this is header
    </button>
    <div
      aria-hidden="false"
      aria-labelledby="header-id-1"
      className="tribe-editor__accordion__row-content content-class"
      id="content-id-1"
      role="tabpanel"
    >
      this is a content
    </div>
  </article>
</div>
`;

exports[`Accordion Element renders null 1`] = `null`;
